--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 edition = "2018"
 
 authors = ["JP Stauffert"]
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 keywords = ["asyncapi"]
 homepage = "https://gitlab.com/Tinted/asyncapi"
 repository = "https://gitlab.com/Tinted/asyncapi"
 description = "This crate aims to provide data structures that represent the AsyncAPI specification easily deserializable with serde."
+readme = "Readme.md"
 
 [dependencies]
 serde = {version = "1.0.130", features = ["derive"]}
