--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.67"
 serde_yaml = "0.8.20"
 indexmap = { version = "1.7.0", features = ["serde-1"] }
+
+[dev-dependencies]
+paste = "1.0.5"
