--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,12 @@ readme = "Readme.md"
 serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.67"
 serde_yaml = "0.8.20"
-indexmap = { version = "1.7.0", features = ["serde-1"] }
+indexmap = { version = "1.8.1", features = ["serde-1"] }
 
 [dev-dependencies]
 paste = "1.0.5"
+
+[build-dependencies]
+quote = "1.0.10"
+convert_case = "0.4.0"
+regex = "1.5.4"
