Pull out test generation into separate binary
Doesn't need to clone subrepositories including test fixtures on every
build via build.rs.
Fix some issues arising when running tests.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "fixtures/tck"]
 	path = fixtures/tck
 	url = https://github.com/asyncapi/tck
+[submodule "fixtures/spec"]
+	path = fixtures/spec
+	url = https://github.com/asyncapi/spec.git
