--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,11 @@ serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.67"
 serde_yaml = "0.9.21"
 indexmap = { version = "1.8.1", features = ["serde-1"] }
+openapiv3 = { version = "1.0.2", optional = true }
+
+[features]
+openapi-schema = ["openapiv3"]
+openapi-info = ["openapiv3"]
 
 [workspace]
 members = [
