--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ readme = "README.md"
 serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.67"
 serde_yaml = "0.9.21"
-utoipa = { version = "3.3.0", optional = true }
+utoipa = { version = "3.3.0", optional = true, features=["debug"] }
 
 [features]
 utoipa-schema = ["utoipa"]
