--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,7 @@ serde_yaml = "0.9.21"
 utoipa = { version = "3.3.0", optional = true, features=["debug"] }
 
 [features]
-utoipa-schema = ["utoipa"]
-utoipa-info = ["utoipa"]
+utoipa = ["dep:utoipa"]
 
 [workspace]
 members = [
